--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
           <div class="footer-column">
             <h4>Kontak</h4>
             <ul>
-              <li>Email: info@anakhebat.id</li>
-              <li>WhatsApp: +62 123 4567 890</li>
+              <li>Email: wendrasaputra20@guru.smk.belajar.id</li>
+              <li>WhatsApp: 089668379034</li>
               <li>Alamat: Jakarta, Indonesia</li>
             </ul>
           </div>
