--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
           <button class="btn btn-secondary btn-large">
             <span>Pelajari Lebih Lanjut</span>
           </button>
+          <a href="https://play.google.com/store/apps/details?id=com.anakhebat.habittracker" target="_blank"
+            class="btn btn-primary btn-large"
+            style="background: #000; border-color: #000; display: inline-flex; align-items: center; gap: 8px; text-decoration: none;">
+            <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+              <path
+                d="M3.609 1.814L13.792 12 3.61 22.186a2.048 2.048 0 01-.52-.36l-.08-.08a1.942 1.942 0 01-.48-1.55V3.804c.06-.71.3-1.39.84-1.85.08-.07.16-.13.24-.19l-.01.05zM15.11 13.31l5.96 3.12c.98.51.98 1.48 0 1.99l-.31.17-6.84-6.85 1.19 1.57zm1.19-2.62l6.84-6.85.31.17c.98.51.98 1.48 0 1.99l-5.96 3.12-1.19-1.43zm-7.92-1.31L19.53 2.92c-1.3-.78-3.08-.24-3.77 1.15l-7.38 7.39 10 10.01 7.38 7.39c.69 1.4 2.47 1.93 3.77 1.15l-11.15-6.46z" />
+            </svg>
+            <span>Install Aplikasi</span>
+          </a>
         </div>
         <div class="hero-stats">
           <div class="stat-item">
