Implement Real Auth for Add User and Fix Edit/Delete CRUD

--- a/dashboard.html
+++ b/dashboard.html
@@ -116,6 +116,10 @@
                         <input type="text" id="studentName" required placeholder="Nama Siswa">
                     </div>
                     <div class="form-group">
+                        <label>Password Akun</label>
+                        <input type="text" id="studentPassword" required placeholder="Minimal 6 karakter" minlength="6">
+                    </div>
+                    <div class="form-group">
                         <label>Email Siswa (Opsional/Login)</label>
                         <input type="email" id="studentEmail" placeholder="email@siswa.com">
                     </div>
@@ -153,6 +157,10 @@
                         <input type="text" id="teacherName" required placeholder="Nama Guru">
                     </div>
                     <div class="form-group">
+                        <label>Password Akun</label>
+                        <input type="text" id="teacherPassword" required placeholder="Minimal 6 karakter" minlength="6">
+                    </div>
+                    <div class="form-group">
                         <label>Email</label>
                         <input type="email" id="teacherEmail" required placeholder="email@guru.com">
                     </div>
@@ -184,6 +192,10 @@
                     <div class="form-group">
                         <label>Nama Orang Tua</label>
                         <input type="text" id="parentName" required placeholder="Nama Ayah/Ibu">
+                    </div>
+                    <div class="form-group">
+                        <label>Password Akun</label>
+                        <input type="text" id="parentPassword" required placeholder="Minimal 6 karakter" minlength="6">
                     </div>
                     <div class="form-group">
                         <label>Email</label>
